...
                verticalAlignment = Alignment.CenterVertically
            ) {
                // Close Button
                IconButton(onClick = onCloseClick) {
                    Icon(
                        Icons.Default.Close,
                        contentDescription = "Close",
                        tint = textColor
                    )
                }

                // Title
                Text(
...
